# testgenerator

./: .gitignore  CMakeLists.txt  README.md  main.cc
include/: command.h  dir.h  generator.h
src/: command.cc  dir.cc  generator.cc
templates/demosubject1/5/addition/: test
templates/demosubject1/5/multi/: test
templates/templatebase/: test
